--- a/traning/index.html
+++ b/traning/index.html
@@ -4,6 +4,6 @@
             <title>website ku</title>
         </head>
         <body>
-            <h1>astri cantik</h1>
+            <h1>astri cantik banget</h1>
         </body>
     </html>
